as it's hard use scheme's ast tree directly. I token project treehungger from ajaxorg.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "biwascheme"]
 	path = biwascheme
 	url = git@github.com:nzinfo/biwascheme.git
+[submodule "treehugger"]
+	path = treehugger
+	url = git@github.com:nzinfo/treehugger.git
